Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online. Research Data Analyst - CBRE Careers. Adevinta Data Analyst | SmartRecruiters. Adevinta Senior Data Analyst | SmartRecruiters. Wish - Data Analyst. Statistics & Data Corporation (SDC) - Jobs: Senior Quality Assurance Specialist - Apply online. Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply online. Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online. Job Application for Data Analyst at Yext. Looker - Data Analyst, Enterprise Programs. PayFit - Data Analyst.       Data Analyst: Operations - TeeTurtle     . Assistant Scientist - Data Review Analyst - Vaccines Team - PPD Careers. Clinical Data Analyst | GENESYS Consulting Services, Inc.. Lamudi - Senior Data Analyst. Lamudi - Data Analyst. Job Application for Quantitative Trading & Data Analyst at DRW . Kandidate - Jobs: Data & Growth Analyst (1500-2000 EUR) - Apply online. Data Analyst / Data Scientist | Internship | Tech-Savvy. Job Application for Talent Management Data Analyst at Agoda. Data Analyst - Apply online - Vezeeta - Jobs. Data & Growth Analyst (1500-2000 EUR) - Apply ... - Kandidate - Jobs. Data Business Analyst - Apply online - Payzer - Jobs. Job Application for Senior Data Analyst - Strategy & Operations at JUUL Labs. Job Application for Biostatistician  at JUUL Labs. Job Application for Senior Statistical Programmer  at JUUL Labs. Job Application for Statistical Programmer  at JUUL Labs. Job Application for Data Analyst at Thirty Madison. Principal Biostatistician - Syneos Health Careers. Principal Biostatistician - Syneos Health Careers. Sr Statistical Programmer - Syneos Health Careers. Senior Clinical Data Analyst - St. Joseph Health Careers. Internship R&D Data Analyst & summer job - Protix. Senior Data Management Analyst - Experian Careers. SEGA Europe Limited Careers - Data Analyst. Data Analyst - Sunnyvale, CA - Pleasanton, CA - or Kirkland, WA in .... Statistical Program Superv

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://biffa.workable.com/j/E9CF1DD64D'>Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/jobs/research-data-analyst-58446'>Research Data Analyst - CBRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -87,7 +91,7 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://teeturtle.recruitee.com/o/data-analyst-operations'>
+<h5><a href='https://teeturtle.recruitee.com/o/data-analyst-operations'>
       Data Analyst: Operations - TeeTurtle
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -116,6 +120,11 @@
 <h5><a href='https://kandidate.workable.com/j/755DAD07A1'>Kandidate - Jobs: Data & Growth Analyst (1500-2000 EUR) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://anaxee.freshteam.com/jobs/iqcIsGkSZ0FA/data-analyst-data-scientist-internship-tech-savvy'>Data Analyst / Data Scientist | Internship | Tech-Savvy</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Data Analyst / Data Scientist | Internship | Tech-Savvy|. Indore, Madhya Pradesh | 
+Full time. Apply Now. Job role: As a data analyst, you will be responsible for?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/agoda/jobs/1792044'>Job Application for Talent Management Data Analyst at Agoda</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -162,7 +171,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -191,12 +200,12 @@ desirable?...</p>
 <p>Jul 18, 2019 ... Sunnyvale is now hiring a Data Analyst - Sunnyvale, CA - Pleasanton, CA - or 
 Kirkland, WA in Sunnyvale, California. Review all of the job details and apply?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mainebhr.recruiterbox.com/jobs/fk03mer/'>Statistical Program Supervisor at State of Maine</a></h5> 
+<h5><a href='https://mainebhr.recruiterbox.com/jobs/fk03mer/'>Statistical Program Supervisor at State of Maine</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... The division is responsible for developing, evaluating, refining, reporting, and 
 presenting statistical data; and providing technical advice and assistance to?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... The Data Analyst will work in the analytics team on games by SEGA Europe's 
 mobile studio, HARDlight. As part of the studio's Live Operations team, you would
@@ -290,7 +299,7 @@ related technical field; Experience using statistics and machine learning to sol
 <p>4 days ago ... Each of these marketing channels center around a rich central problem from 
 deriving value from sparse data to auction theory and game theory all with the?...</p>
 <hr/>
-<h5><a href='http://zalora.applytojob.com/apply/jCDVS5D6CI/Marketplace-Data-Analyst'>Marketplace Data Analyst - ZALORA SEA - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/jCDVS5D6CI/Marketplace-Data-Analyst'>Marketplace Data Analyst - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -373,7 +382,7 @@ Ergasias SA.</p>
 position. We optimize for long term value by focusing on engineering as opposed 
 to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/averinc/jobs/1783775'>Job Application for Senior Healthcare Data Analyst at Aver Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/averinc/jobs/1783775'>Job Application for Senior Healthcare Data Analyst at Aver Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Senior Healthcare Data Analyst. Aver is looking to add to its stellar customer 
 analytics team by hiring a Senior Healthcare Data Analyst. This role is 
@@ -391,7 +400,7 @@ hire, you'll be responsible for data needs throughout the organization. You'll b
 Automate quarterly insights across native / partner channels for external facing 
 analyst?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1777396?gh_jid=1777396'>Job Application for Data Analyst - Returnship at Cloudflare</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1777396?gh_jid=1777396'>Job Application for Data Analyst - Returnship at Cloudflare</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The Path Forward Return to Work program at Cloudflare is a 16 week paid 
 returnship for experienced professionals returning to the workforce after taking 
@@ -477,15 +486,6 @@ American?...</p>
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692257817-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://oceansapart.join.com/jobs/249370-data-analyst-german-speaking-m-w-d'>Data Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>12. Juli 2019 ... Oceans Apart has a job opening for Data Analyst (german-speaking) (m/w/d) in 
-Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
 
 
