--- a/data-architect.html
+++ b/data-architect.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692377773-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692419671-database-architect-4-job-id-603031-'>Computer Consultants International, Inc. Database Architect 4 (Job ID: 603031) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -78,7 +82,7 @@ vision experts and machine learning researchers, and are expected to get up?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers-exlservice.icims.com/jobs/7039/data-architect%2C-decision-analytics-services/job'>Data Architect, Decision Analytics Services ... - EXL Service | Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-exlservice.icims.com/jobs/7039/data-architect%2C-decision-analytics-services/job'>Data Architect, Decision Analytics Services ... - EXL Service | Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Exl Service is now hiring a Data Architect, Decision Analytics Services in San 
 Jose, California. Review all of the job details and apply today!</p>
@@ -188,11 +192,11 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -230,7 +234,7 @@ best?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/conviva/job/oaqV9fwo'>Conviva Careers - Principal Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/conviva/job/oaqV9fwo'>Conviva Careers - Principal Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -272,7 +276,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-15</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/20LD1S16bs/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/20LD1S16bs/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -326,11 +330,11 @@ class?...</p>
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691423780-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691423780-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -459,10 +463,6 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <h5><a href='https://boards.greenhouse.io/indexexchange/jobs/1750301'>Job Application for Data Architect at Index Exchange</a></h5> 
 <p><span class="badge badge-light">Kitchener-Waterloo</span></p>
 <p>Posted on: 2019-06-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qc09Vfw0&k=Job&j=otphafw3&__jvst=Employee&__jvsd=sLm23fwW&__jvsc=Twitter&bid=nc3rwKwr'>Qlik Careers - Analytics Data Architect</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-06-29</p>
 <hr/>
 
 
